src/objects/Batch_Upload_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Destination_Field__c</fullName>
        <label>Destination Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination_Object__c</fullName>
        <description>this is used for selecting Destination object</description>
        <inlineHelpText>this is used for selecting Destination object</inlineHelpText>
        <label>Destination Object</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Field__c</fullName>
        <description>This is used for selecting source field from batch upload</description>
        <inlineHelpText>This is used for selecting source field from batch upload object</inlineHelpText>
        <label>Source Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Batch Upload Setting</label>
</CustomObject>